# libxmlfixes

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.am  config.h.in  configure.ac  libxmldefines.cmake  libxmlfixes.c  libxmlfixes.h  main.mk  make-wanted.c  mystring.h  selectors.c  selectors.h  setup.sh  string.h  suck_config.py  tags.wanted  wanted_tags.h
cmake/: AddModule.cmake
src/: libxmlfixes.c  libxmlfixes.h  make-wanted.c  test.c
